# cabal-dependency-licenses

./: .gitignore  CHANGELOG  README.markdown  cabal-dependency-licenses.cabal
src/: Main.hs
