Name:     cabal-dependency-licenses
Version:  0.2.0.0
Synopsis: Compose a list of a project's transitive dependencies with their licenses

Description:
  Compose a list of a project's transitive dependencies with their licenses

License:            BSD3
License-file:       LICENSE
Author:             Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:         Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:          2014 Jasper Van der Jeugt
Category:           Distribution
Build-type:         Simple
Extra-source-files: CHANGELOG
Cabal-version:      >= 1.10
Homepage:           http://github.com/jaspervdj/cabal-dependency-licenses
Bug-reports:        http://github.com/jaspervdj/cabal-dependency-licenses/issues

Executable cabal-dependency-licenses
  Hs-source-dirs:      src
  Main-is:             Main.hs
  Default-language:    Haskell98
  Ghc-options:         -Wall

  Build-depends:
    Cabal      >= 1.18 && < 1.25,
    containers >= 0.5  && < 0.6,
    base       >= 4    && < 5,
    directory  >= 1.2  && < 1.4,
    filepath   >= 1.3  && < 1.5

Source-repository head
    Type:     git
    Location: https://github.com/jaspervdj/cabal-dependency-licenses
