Name:     cabal-dependency-licenses
Version:  0.2.0.1.1
Synopsis: Compose a list of a project's transitive dependencies with their licenses

Description:
            Compose a list of a project's transitive dependencies with their licenses
            .
            Note: this version differs from the original
            implementation by Jasper Van der Jeugt in that it takes a
            different approach to handling dist-newstyle, and it has
            other enhancements such as SPDX handling.  The original
            version is relatively unmaintained; this version contains
            all substantive modifications to the original through 12
            Mar 2019 (through commit 47e927b in the original
            repository).

License:            BSD3
License-file:       LICENSE
Author:             Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:         Jonathan Daugherty, Kevin Quick
Copyright:          2014 Jasper Van der Jeugt
Category:           Distribution
Build-type:         Simple
Extra-source-files: CHANGELOG
Cabal-version:      >= 1.10
Homepage:           http://github.com/matterhorn-chat/cabal-dependency-licenses
Bug-reports:        http://github.com/matterhorn-chat/cabal-dependency-licenses/issues

Executable cabal-dependency-licenses
  Hs-source-dirs:      src
  Main-is:             Main.hs
  Default-language:    Haskell98
  Ghc-options:         -Wall

  Build-depends:
                Cabal      >= 1.24.0.0
              , containers >= 0.5  && < 0.7
              , base       >= 4    && < 5
              , directory  >= 1.2  && < 1.4
              , filepath   >= 1.3  && < 1.5
              , filemanip

Source-repository head
    Type:     git
    Location: https://github.com/matterhorn-chat/cabal-dependency-licenses
